[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lxml-dataclass"
version = "1.0.1"
description = "Create LXML Elements as dataclasses representations"
readme = "README.md"
authors = [{ name = "Sebastian Salinas", email = "seba.salinas.delrio@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
keywords = ["lxml", "dataclass", "xml"]

requires-python = ">=3.11"
dependencies = [
    "lxml>=5.2.1",
]

[project.urls]
Homepage = "https://github.com/sebasalinass/lxml-dataclass"

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]
